--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 
     implementation(platform("androidx.compose:compose-bom:$compose_bom_version"))
     implementation("androidx.compose.ui:ui")
-    implementation("androidx.compose.material:material")
+    implementation("androidx.compose.material3:material3:1.1.0-beta02")
     implementation("androidx.activity:activity-compose:$activity_version")
     implementation("com.google.accompanist:accompanist-systemuicontroller:$accompanist_version")
 }
